@@ -291,10 +291,10 @@ contains
 
   subroutine mean_preserve_interp(params,in,out,zeros)
 
-    type(mpinterp),         intent(in)  :: params
-    real(rk),dimension(:,:),intent(in)  :: in
-    real(rk),dimension(:,:),intent(out) :: out
-    logical, dimension(:,:),intent(out) :: zeros
+    type(mpinterp),         intent(inout) :: params
+    real(rk),dimension(:,:),intent(in)    :: in
+    real(rk),dimension(:,:),intent(out)   :: out
+    logical, dimension(:,:),intent(out)   :: zeros
     
     integer :: i,j,ii
 
